@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <addon id="plugin.video.erosnow-rain"
        name="ErosNow"
-       version="1.0.0"
+       version="1.0.1"
        provider-name="YoColdRain">
     <requires>
         <import addon="xbmc.python" version="2.1.0"/>
