@@ -1,3 +1,6 @@
+[B][COLOR green]V 1.0.1 (Friday 26 February 2016)[/COLOR][/B]
+-- [COLOR yellow][B]Fixes[/COLOR]  - Fixed character encoding issues and inventory listing by user geo.[/B]
+
 [B][COLOR green]V 1.0.0 (Friday 26 February 2016)[/COLOR][/B]
 -- [COLOR yellow][B]Initial Release[/COLOR][/B]
 
